--- a/PongExercise/PongExercise.vcxproj
+++ b/PongExercise/PongExercise.vcxproj
@@ -124,7 +124,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\CORSO AIV 2021-2022\Library\SDL2-2.0.20\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\CORSO AIV 2021-2022\Library\SDL2-2.0.20\include;D:\CORSO AIV 2021-2022\Library\sdl_stb_font-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
