--- a/PongExercise/PongExercise.vcxproj
+++ b/PongExercise/PongExercise.vcxproj
@@ -129,7 +129,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\CORSO AIV 2021-2022\Library\SDL2-2.0.20\lib\x64;D:\CORSO AIV 2021-2022\Library\SDL2_ttf-2.0.18\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\CORSO AIV 2021-2022\Library\SDL2-2.0.20\lib\x64;D:\CORSO AIV 2021-2022\Library\SDL2_ttf-2.0.18\lib\x64;D:\CORSO AIV 2021-2022\Library\SDL2_ttf-2.0.18\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
